--- a/src/app/badge/badge.component.css
+++ b/src/app/badge/badge.component.css
@@ -16,7 +16,7 @@
 .grey-message {
   background-color: grey;
 }
-.btn {
+.badge {
   width: max-content;
   padding-left: 5px;
   padding-right: 5px;
