--- a/src/app/badge/badge.component.html
+++ b/src/app/badge/badge.component.html
@@ -1,5 +1,1 @@
-<div
-  class="badge"
-  [ngClass]="getClass(message)"
-  [innerHTML]="message?.text"
-></div>
+<div class="badge" [ngClass]="color" [innerHTML]="message?.text"></div>
