--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <section>
-  <my-time-counter (counter)="(counterHelper)"></my-time-counter>
+  <!-- TODO: add the return "counter" and write the value into the #text7 -->
+  <my-time-counter></my-time-counter>
   <div>
     <input type="text" readonly [ngModel]="lastText" id="lastBadgeText" />
   </div>
