--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,5 +11,5 @@ input:hover {
 }
 
 /**
-  * TODO: Change the text color of the 5th input, inside the section container, to red ( max 2 min )
+  * TODO: Change the text color of the 5th input, inside the section container, to red
   */
